try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,7 +73,9 @@
 }
 
 .amanox {
-    position: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     width: 50%;
     animation-duration: 3s;
     animation-name: amanox;
@@ -83,13 +85,10 @@
   
   @keyframes amanox {
     from {
-      margin-left: auto;
-      width: 10%;
+      transform: translateX(0%) scale(0.2);
     }
   
     to {
-      margin-left: 0%;
-      margin-right: auto;
-      width: 50%;
+      transform: translateX(-50%) scale(1.0);
     }
-  }
+  }  
